Bug fix in find index, added exterior methods, gamma draws

--- a/examples/Example.ipynb
+++ b/examples/Example.ipynb
@@ -19,9 +19,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "190.099009126\n"
+     ]
+    }
+   ],
    "source": [
     "########################\n",
     "###    Seed Values   ###\n",
@@ -48,7 +56,9 @@
     "\n",
     "# Data Output Size\n",
     "freqs = np.linspace(.99998, 1.00002, 10000)*5.5e5\n",
-    "PSD_Data = np.zeros((365, len(freqs)))"
+    "PSD_Data = np.zeros((365, len(freqs)))\n",
+    "\n",
+    "print(86400*(freqs[1]-freqs[0]))"
    ]
   },
   {
