--- a/examples/Example.ipynb
+++ b/examples/Example.ipynb
@@ -3,24 +3,24 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "import sys, os\n",
     "import numpy as np\n",
-    "import scipy\n",
-    "import scipy.special\n",
+    "#import scipy\n",
+    "#import scipy.special\n",
     "import scipy.stats\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import pymultinest\n",
     "import corner\n",
     "\n",
-    "sys.path.append('../AxiScan/')\n",
-    "import mc_gen\n",
-    "import scan\n",
-    "import axion_ll\n",
-    "import analysis_utilities\n",
+    "from AxiScan import mc_gen\n",
+    "from AxiScan import scan\n",
+    "from AxiScan import axion_ll\n",
+    "from AxiScan import analysis_utilities\n",
     "\n",
     "# Figure size\n",
     "mpl.rcParams['figure.figsize'] = 20, 14"
@@ -29,7 +29,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "########################\n",
@@ -71,7 +73,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -104,7 +108,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -137,7 +143,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "A_Limits = np.zeros(mass_TestSet.shape) # The expected 95% constraint\n",
@@ -160,7 +168,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -193,7 +203,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "##############################\n",
@@ -235,7 +247,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "pymultinest.run(LL_Multinest, prior_cube, n_params,\n",
@@ -246,7 +260,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
