--- a/examples/Example.ipynb
+++ b/examples/Example.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AxiScan Example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -8,20 +15,23 @@
    },
    "outputs": [],
    "source": [
+    "# Import relevant modules\n",
+    "\n",
+    "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "import numpy as np\n",
     "import scipy.stats\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
+    "mpl.rcParams['figure.figsize'] = 20, 14 # default figure size\n",
     "import pymultinest\n",
     "import corner\n",
     "\n",
-    "from AxiScan import mc_gen\n",
-    "from AxiScan import scan\n",
-    "from AxiScan import axion_ll\n",
-    "from AxiScan import analysis_utilities\n",
-    "\n",
-    "# Figure size\n",
-    "mpl.rcParams['figure.figsize'] = 20, 14"
+    "from AxiScan import mc_gen # module for generating Monte Carlo simulations\n",
+    "from AxiScan import scan # module for accessing axion log likelihood and test statistic\n",
+    "import analysis_utilities as au # module with some useful functions"
    ]
   },
   {
@@ -125,7 +135,7 @@
     "\n",
     "\n",
     "# Construct the range of signal strengths to scan over\n",
-    "Sigma_A = analysis_utilities.getSigma_A(mass_TestSet, 365, 86400, v0_Exp, vObs_Exp, PSDback)\n",
+    "Sigma_A = au.getSigma_A(mass_TestSet, 365, 86400, v0_Exp, vObs_Exp, PSDback)\n",
     "N_indMasses = 4 * c**2 / (3 * v0_Exp**2) * np.log(np.amax(freqs)/np.amin(freqs))\n",
     "TS_Thresh = scipy.stats.norm.ppf(1 - (1-scipy.stats.norm.cdf(5))/N_indMasses)**2\n",
     "detection_Threshold = np.sqrt(TS_Thresh)*Sigma_A\n",
@@ -157,9 +167,10 @@
     "    temp = np.copy(TS_Array[i])\n",
     "    temp[0:np.nanargmax(temp)] = float('nan')\n",
     "    temp -= np.nanmax(temp)\n",
-    "    A_Limits[i] = A_TestSet[analysis_utilities.find_nearest_index(temp, -2.706)]\n",
+    "    A_Limits[i] = A_TestSet[np.nanargmin(np.abs(temp+2.706))]\n",
     "    \n",
-    "A_Limits = np.maximum(A_Limits, analysis_utilities.zScore(-1)*Sigma_A)\n",
+    "\n",
+    "A_Limits = np.maximum(A_Limits, au.zScore(-1)*Sigma_A)\n",
     "A_Scans = np.maximum(0, A_Scans)"
    ]
   },
@@ -185,8 +196,8 @@
     "plt.subplot(2, 2, 1)\n",
     "plt.title('Constraints', size = 20)\n",
     "plt.plot(mass_TestSet, A_Limits)\n",
-    "plt.fill_between(mass_TestSet, analysis_utilities.zScore(-1)*Sigma_A, analysis_utilities.zScore(2)*Sigma_A, color = 'yellow')\n",
-    "plt.fill_between(mass_TestSet, analysis_utilities.zScore(-1)*Sigma_A, analysis_utilities.zScore(1)*Sigma_A, color = 'limegreen')\n",
+    "plt.fill_between(mass_TestSet, au.zScore(-1)*Sigma_A, au.zScore(2)*Sigma_A, color = 'yellow')\n",
+    "plt.fill_between(mass_TestSet, au.zScore(-1)*Sigma_A, au.zScore(1)*Sigma_A, color = 'limegreen')\n",
     "plt.axvline(x=ma, ls = '--', c = 'black')\n",
     "\n",
     "\n",
