Updated arXiv number

--- a/examples/Example.ipynb
+++ b/examples/Example.ipynb
@@ -229,7 +229,7 @@
     "\n",
     "The set of masses in `mass_TestSet` is taken to be points on a log-spaced grid beginning at the mass corresponding to the minimum frequency for which we have data with a spacing factor of `1 + v0_Exp**2 /(2 c**2)`.\n",
     "\n",
-    "The set of `A` in `A_TestSet` is determined by the necessary value of `A` of an injected signal expected to produce a 5$\\sigma$ detection. At a given mass-point, this value of A can be computed using [57] and [60] of 1711.xxxx. To ensure a sufficiently large range, we compute the maximum value of such an `A` over all mass, denoting this `A_max`. Then at each mass-point, we scan over values `-A_max` to `5 * A_max`\n",
+    "The set of `A` in `A_TestSet` is determined by the necessary value of `A` of an injected signal expected to produce a 5$\\sigma$ detection. At a given mass-point, this value of A can be computed using [57] and [60] of 1711.10489. To ensure a sufficiently large range, we compute the maximum value of such an `A` over all mass, denoting this `A_max`. Then at each mass-point, we scan over values `-A_max` to `5 * A_max`\n",
     "\n"
    ]
   },
@@ -345,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above, we plot the results of the simple scan for an axion signal. In the left panel, we plot the resulting 95% constraints (solid black) against the expected 95% constraints (dashed black) and 1$\\sigma$ (green) and 2$\\sigma$ (yellow) containment determined by the Asimov dataset according to [56] of 1711.xxxx. In the right panel, we plot at each mass-point the MLE of `A` (solid black) and the value of A at the threshold of a 5$\\sigma$ detection (dashed black)."
+    "Above, we plot the results of the simple scan for an axion signal. In the left panel, we plot the resulting 95% constraints (solid black) against the expected 95% constraints (dashed black) and 1$\\sigma$ (green) and 2$\\sigma$ (yellow) containment determined by the Asimov dataset according to [56] of 1711.10489. In the right panel, we plot at each mass-point the MLE of `A` (solid black) and the value of A at the threshold of a 5$\\sigma$ detection (dashed black)."
    ]
   },
   {
